# simplextree

./: .Rbuildignore  .gitignore  .travis.yml  CRAN-RELEASE  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  appveyor.yml  cran-comments.md  filtration.Rmd  filtration.nb.html  intro.Rmd  intro.nb.html  simplex_tree_backup.R  st.rds
R/: RcppExports.R  cech.R  combinadic.R  construct.R  flag.R  nerve.R  operations.R  plot.R  predicates.R  print.R  rips.R  sample-abstract.R  sample-geometric.R  sample.R  serialize.R  simplex-tree.R  simplex_tree.R  simplextree-package.R  simplices.R  tests.R  traverse.R  union_find.R  utils-combinadic.R  utils-union-find.R  vertices.R
data/: cech_data.rda
docs/: LICENSE-text.html  authors.html  index.html  pkgdown.yml
inst/: CMakeLists.txt  st_test.cpp
inst/doc/: simplextree.R  simplextree.Rmd  simplextree.html
inst/include/: UnionFind.h  simplextree.h  utilities.h
inst/include/UnionFind/: UnionFind.hpp  uf.hpp
inst/include/simplextree/: simplextree.hpp  st.hpp  st_filtration.hpp  st_iterators.hpp  st_traits.hpp
inst/include/utility/: combinations.h  delegate.hpp  discrete.h  meta_utilities.h  set_utilities.h  short_alloc.h
man/: adjacent.Rd  adjacent_vertices.Rd  apply.simplex_tree.Rd  as.list.st_traversal.Rd  as_XPtr.Rd  cech.Rd  clear.Rd  clone.Rd  (+57 more)
man-roxygen/: params-traversal.R  params-vertices.R  ref-bobrowski2017.R  ref-boissonnat2014.R  ref-costa2016.R  ref-dey2014.R  ref-erdos1959.R  ref-kahle2009.R  ref-kahle2011.R  ref-kahle2017.R  ref-linial2006.R  ref-mccaffrey2004.R  ref-meshulam2009.R  ref-penrose2003.R
(+33 files in other folders)
